Add required dependency to travis build file

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ cache:
   directories:
   - $HOME/.stack
 
+# GHC needs libgmp
+addons:
+  apt:
+    packages:
+    - libgmp-dev
+
 before_install:
   # Download and unpack the stack executable
   - mkdir -p ~/.local/bin
